# minne-backend

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  README.mnd  build.rs  docker-bake.hcl  docker-compose.example.yml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: build_and_test.yml  build_docker_container.yml  code_style_checks.yml
example_payloads/: create_user.json  login.json
migrations/2023-01-20-135012_create_users/: up.sql
migrations/2023-01-22-145017_create_task_list/: up.sql
migrations/2023-01-22-162855_make_user_email_unique/: down.sql
migrations/2023-01-23-062101_mark_tasks_as_done/: down.sql  up.sql
migrations/2023-01-27-071243_create_pat/: up.sql
migrations/2023-01-27-130939_add_disabled_flag_for_pat/: down.sql  up.sql
src/: fairings.rs  guards.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/routes/: auth.rs  health.rs  task.rs  user.rs  version.rs
templates/: login_from_app.html.hbs
templates/static/: minne.css
