[package]
name = "minne-backend"
version = "0.0.0"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "Backend for the Minne app"
repository = "https://github.com/flying7eleven/minne-backend"
readme = "README.md"
license-file = "LICENSE.md"
rust-version = "1.66"
build = "build.rs"

[build-dependencies.vergen]
version = "7.5.0"
default-features = false
features = ["git", "rustc", "build", "cargo"]