[package]
name = "minne-backend"
version = "0.0.0"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "Backend for the Minne app"
repository = "https://github.com/flying7eleven/minne-backend"
readme = "README.md"
license-file = "LICENSE.md"
rust-version = "1.66"
build = "build.rs"

[dependencies.diesel]
version = "2.0.2"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "2.0.0"
default-features = false

[dependencies.rocket]
version = "0.5.0-rc.2"
default-features = false
features = ["json"]

[build-dependencies.vergen]
version = "7.5.0"
default-features = false
features = ["git", "rustc", "build", "cargo"]