[package]
name = "minne-backend"
version = "0.0.0"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "Backend for the Minne app"
repository = "https://github.com/flying7eleven/minne-backend"
readme = "README.md"
license-file = "LICENSE.md"
rust-version = "1.67"
build = "build.rs"

[dependencies.bcrypt]
version = "0.14.0"
default-features = false
features = ["std"]

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = ["clock", "serde"]

[dependencies.diesel]
version = "2.0.3"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "2.0.0"
default-features = false

[dependencies.fern]
version = "0.6.1"
default-features = false

[dependencies.jsonwebtoken]
version = "8.2.0"
default-features = false

[dependencies.log]
version = "0.4.17"
default-features = false

[dependencies.r2d2]
version = "0.8.10"
default-features = false

[dependencies.rocket]
version = "0.5.0-rc.2"
default-features = false
features = ["json"]

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors" # should be replaced with a working release version
branch = "master"
default-features = false

[dependencies.serde]
version = "1.0.152"
default-features = false

[dependencies.uuid]
version = "1.3.0"
default-features = false
features = ["v4"]

[build-dependencies.vergen]
version = "7.5.0"
default-features = false
features = ["git", "rustc", "build", "cargo"]